style fix: making background behind magnified shape-mode cells a solid color

--- a/src/app/component/cell/cell.component.scss
+++ b/src/app/component/cell/cell.component.scss
@@ -336,5 +336,6 @@
   .cell {
     animation: magnify-and-move 0.15s ease-out forwards;
     flex: 0 0 auto;
+    background-color: var(--mat-sys-background);
   }
 }
